--- a/hostapd.conf
+++ b/hostapd.conf
@@ -1,5 +1,5 @@
 # This is the name of the WiFi interface
-interface=wlan0
+interface=wlan_ap
 
 # Use the nl80211 driver with the brcmfmac driver
 driver=nl80211
